# PracticeCppLogMacro

./: .gitignore  README.md
.github/workflows/: cmake-single-platform.yml
Test/: CMakeLists.txt  build.bat  build.sh  foo.cpp  main.cpp
Test/ThreadCheck/: thread_check.cpp  thread_check.hpp
Test/TmpFolder/: bar.cpp  bar.hpp
logutil/: CMakeLists.txt  logutil.cpp  logutil.hpp
